# PNOC-dashboards

./: .gitignore  README.md  annual_procurement_plan_recompiler.py  app_supertask_recompiler.py  application.py  contract_recompiler.py  inventory_of_clients_recompiler.py  plantilla_recompiler.py  proc_monitorning_report.py  proc_supertask.py  pyproject.toml  recompiler.py  runner.py  staffing_summary_recompiler.py  training_summary_recompiler.py
HR/: Mock PLANTILLA OF PERSONNEL AND SALARY ADJUSTMENT - BLANK.xlsx  Mock_2024 Contract of Service Employees.xlsx  Mock_2024 Contract of Service.xlsx  Mock_PNOC Staffing Summary As of 2nd Quarter 2024 (1).xlsx  Mock_TRAINING SUMMARY REPORT.xlsx
Procurement/: 2024 PMR FOR GPBB (1).xlsx  PMR.xlsx  PNOC 2024 1st Sem Revised APP.xlsx
Project Management/: Mock_Inventory_of_Clients - RGB (1).xlsx
