[project]
name = "pnoc-dashboards"
version = "1.0"
description = "Recompiler for PNOC dashboards"
authors = [
    {name = "Senatin, Uy"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
